# rustybytecode

./: Cargo.toml  README.md  build.rs
.github/: codecov.yml  dependabot.yml
docs/: CONTRIBUTING.md  RustyBytecodeIIR.md  TODO.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: class_parsing.rs
src/: lib.rs
src/ir/: jvm_instruction.rs  mod.rs
src/ir/control_flow/path_condition/: mod.rs
src/ir/data_flow/: mod.rs
src/ir/expression/: mod.rs
src/ir/generator/: execution.rs  mod.rs
src/ir/petgraph/: GraphHierarchyAdapter.kt
src/jvm/: method.rs  mod.rs
src/jvm/code/: method_body.rs
src/jvm/parsing/code/: instruction_impl.rs
test_data/rustybytecode/: module-info.java
test_data/rustybytecode/org/rustybytecode/test/: Anno.java  ComplicatedClass.java  MyClass.java  RecordTest.java  TestAnalysis.java
tests/: class_loader.rs  class_parsing.rs  jdk_classes.rs  resolution_ctx.rs  rustybytecode_ir.rs
